--- a/FaceDX/app/src/main/res/layout/activity_chatbot.xml
+++ b/FaceDX/app/src/main/res/layout/activity_chatbot.xml
@@ -68,6 +68,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:padding="16dp"
+        android:fillViewport="true"
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintBottom_toTopOf="@id/chat_input_layout"
         app:layout_constraintStart_toStartOf="parent"
