--- a/mobile/app/src/main/res/layout/activity_chatbot.xml
+++ b/mobile/app/src/main/res/layout/activity_chatbot.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/ayubot"
+                android:text="@string/vivia_bot"
                 android:textSize="20sp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textColor="@color/white"
@@ -91,7 +91,7 @@
                     android:id="@+id/iconbot"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:contentDescription="@string/ayubot"
+                    android:contentDescription="@string/vivia_bot"
                     android:layout_marginEnd="8dp"
                     android:scaleType="centerCrop"
                     android:background="@drawable/icon_chatbot"/>
