--- a/mobile/app/src/main/res/layout/fragment_camera.xml
+++ b/mobile/app/src/main/res/layout/fragment_camera.xml
@@ -89,6 +89,7 @@
             android:layout_height="wrap_content"
             android:text="@string/kenali_kulitmu"
             android:fontFamily="@font/inter_regular"
+            android:textColor="@color/black"
             android:textSize="40sp"
             android:layout_marginStart="23dp"
             android:layout_marginEnd="23dp"
@@ -104,6 +105,7 @@
             android:text="@string/guide_camera"
             android:fontFamily="@font/inter_regular"
             android:textSize="20sp"
+            android:textColor="@color/black"
             android:layout_marginStart="23dp"
             android:layout_marginEnd="23dp"
             android:layout_marginTop="4dp"
